--- a/styles/css.css
+++ b/styles/css.css
@@ -1,49 +1,163 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header {
-    height: 40vh;
+    height: 14.5vw;
     width: 100%;
     background-color: rgb(184, 119, 0);
-
+    border-top: inherit;
+    border-right: inherit;
+    border-left: inherit;
+    border-style: solid;
+    border-bottom-width: 0.2vw;
+    border-color: orange;
 }
 
 .informacoes {
     display: inline-block;
-    margin-top: 1%;
-    width: 25%;
+    margin-top: 1vw;
+    width: 40.5%;
     vertical-align: middle;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 200%;
 }
 
 .medalhas {
-    width: 10%;
+    width: 1.8vw;
+    transition: 0.3s;
 }
 
-.medalhas:hover{
-    -webkit-filter: drop-shadow(5px 3px 1px rgba(0,0,0,.5));
-    filter: drop-shadow(5px 3px 1px rgba(0,0,0,.5));
+.medalhas:hover {
+    -webkit-filter: drop-shadow(5px 3px 1px rgba(0, 0, 0, .5));
+    filter: drop-shadow(5px 3px 1px rgba(0, 0, 0, .5));
     -webkit-transform: scale(1.5);
     transform: scale(1.5);
+    transition: 0.3s;
 }
 
-abbr{
+abbr {
     color: transparent;
 }
 
-a{
+#nome {
+    color: white;
+    font-size: 2vw;
+    -webkit-text-stroke-width: 0.8px;
+    -webkit-text-stroke-color: rgb(0, 0, 0);
+}
+
+a {
     color: inherit;
     text-decoration: none;
 }
 
-.icones{
+.icones {
     border-radius: 100%;
     width: 15%;
 }
 
-#orientacao{
+.icones:hover {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
+#orientacao {
     text-align: right;
+    margin-right: 8.3vw;
+}
+
+#caixa_sobre {
+    margin: 1%;
+    text-align: center;
+    background-color: rgb(56, 56, 56);
+    border-radius: 3vw;
+    width: 22vw;
+    height: 33vw;
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-filter: drop-shadow(5px 3px 1px rgba(0, 0, 0, .5));
+    filter: drop-shadow(5px 3px 1px rgba(0, 0, 0, .5));
+}
+
+#sobre_mim {
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 6%;
+    padding-bottom: 6%;
+    color: white;
+    text-align: left;
+}
+
+#titulos {
+    font-size: 2vw;
+    padding-bottom: 1%;
+}
+
+.textos{
+    font-size: 1.2vw;
+}
+
+.links {
+    transition: color 0.5s;
+}
+
+.links:hover {
+    transition: color 0.5s;
+    color: orange;
+}
+
+#caixa_habilidades {
+    text-align: center;
+    background-color: rgb(56, 56, 56);
+    border-radius: 3vw;
+    width: 40vw;
+    height: 33vw;
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-filter: drop-shadow(5px 3px 1px rgba(0, 0, 0, .5));
+    filter: drop-shadow(5px 3px 1px rgba(0, 0, 0, .5));
+}
+
+#habilidades {
+    padding-left: 6%;
+    padding-right: 6%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    color: white;
+    text-align: right;
+    margin-left: -1%;
+    margin-right: -1%;
+}
+
+.habilidade {
+    text-align: center;
+    font-size: 4vw;
+    display: inline-block;
+    width: 18%;
+    margin-top: -10%;
+    margin-bottom: 3%;
+}
+
+.logo_habilidade {
+    width: 82%;
+    height: 82%;
+    border-radius: 20%;
+}
+
+.likert_t {
+    letter-spacing: 0.02vw;
+    color: rgb(255, 255, 255);
+    height: 10px;
+}
+
+.likert_f {
+    letter-spacing: 0.02vw;
+    color: gray;
+    height: 10px;
+}
+
+.likert_t:hover{
+    transition: color 0.3s;
+    color: orange;
 }
